# rules_py

./: .bazelrc  MODULE.bazel  WORKSPACE.bzlmod
py/tests/external-deps/: BUILD.bazel
py/tests/external-deps/custom-macro/: macro.bzl
py/tests/py-binary/: BUILD.bazel
