"aspect-build/rules_py"

module(
    name = "aspect_rules_py",
    version = "0.0.0",
    compatibility_level = 1,
)

# Lower-bound versions of direct dependencies.
# When bumping, add a comment explaining what's required from the newer release.
bazel_dep(name = "aspect_bazel_lib", version = "1.40.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_rust", version = "0.39.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_perl", version = "0.2.0")

archive_override(
    module_name = "rules_python",
    integrity = "sha256-pYfEFNWqygSEElDYgJsuIeDYn9oll/rZB0GcR+6rirA=",
    strip_prefix = "rules_python-52381415be9d3618130f02a821aef50de1e3af09",
    urls = "https://github.com/bazelbuild/rules_python/archive/52381415be9d3618130f02a821aef50de1e3af09.tar.gz",
)

# Configure rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

openssl_repo = use_extension("//vendor/openssl:openssl_repo_extension.bzl", "openssl_repo")
use_repo(openssl_repo, "openssl")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//py/tools/py:Cargo.toml",
        "//py/tools/venv_bin:Cargo.toml",
        "//py/tools/unpack_bin:Cargo.toml",
    ],
)
crate.annotation(
    build_script_data = [
        "@openssl//:gen_dir",
        "@openssl//:openssl",
    ],
    build_script_data_glob = ["build/**/*.c"],
    build_script_env = {
        "OPENSSL_STATIC": "1",
    },
    crate = "openssl-sys",
    data = ["@openssl"],
    deps = ["@openssl"],
)
use_repo(crate, "crate_index")

register_toolchains(
    "@aspect_rules_py//py/tools/...",
)
